name:                diagrams-sdl
version:             0.1.0.0
synopsis:            SDL backend to diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Backend.SDL
    Diagrams.Backend.SDL.Input
  -- other-modules:       
  other-extensions:
    LambdaCase MultiParamTypeClasses OverloadedStrings PatternGuards
    RankNTypes ScopedTypeVariables TemplateHaskell ViewPatterns
  build-depends:
    base >=4.9 && <4.10,
    lens >=4.14 && <4.15,
    data-default >=0.7 && <0.8,
    containers >=0.5 && <0.6,
    linear >=1.20 && <1.21,
    filepath >=1.4 && <1.5,
    mtl >=2.2 && <2.3,
    bytestring >=0.10 && <0.11,
    distributive >=0.5 && <0.6,
    StateVar >=1.1 && <1.2,
    vector >=0.11 && <0.12,
    diagrams-gl,
    gl,
    geometry,
    sdl2,
    diagrams
  hs-source-dirs:      src
  default-language:    Haskell2010
