name:                diagrams-sdl
version:             0.1.0.0
synopsis:            SDL backend to diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Backend.SDL
    Diagrams.Backend.SDL.Input
    Diagrams.Backend.SDL.Util
  -- other-modules:       
  other-extensions:
    LambdaCase MultiParamTypeClasses OverloadedStrings PatternGuards
    RankNTypes ScopedTypeVariables TemplateHaskell ViewPatterns
  build-depends:
    base >=4.9 && <5.0,
    lens,
    data-default,
    containers,
    linear,
    filepath,
    mtl,
    bytestring,
    distributive,
    StateVar,
    vector,
    diagrams-gl,
    gl,
    constraints,
    optparse-applicative,
    geometry,
    sdl2,
    diagrams
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
